--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -462,3 +462,18 @@ a:hover {
     vertical-align: top;
     margin: -5px 0 0 0;
 }
+
+.ted-talk {
+    margin: 30px auto;
+    text-align: center;
+    background-color: #f9f9f9;
+    padding: 30px;
+}
+
+.ted-talk h1 {
+    margin-bottom: 40px;
+}
+
+.monika-quote {
+    font-style: italic;
+}
